# Obsidian

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  TODO.txt  commandes.txt
.cache/clangd/index/: FrameInfo.h.8102131E82CD5AB1.idx  GPUParticleSystem.cpp.6FA4A092D68547AE.idx  GPUParticleSystem.h.4425FEA6E0A98EB3.idx  GridSystem.cpp.C7D8E01CD2F62105.idx  GridSystem.h.D8553193250F50D9.idx  ODBuffer.cpp.0ADBB6919387A5E4.idx  ODBuffer.h.0DEAC4C1C4C75323.idx  ODCamera.cpp.94CD2215551B46CC.idx  ODCamera.h.4FBD84E2CA14DF44.idx  ODDescriptors.cpp.5A3C38923EC80E4D.idx  ODDescriptors.h.2FB90C1E581ECD27.idx  ODDevice.cpp.C196A06DDAB74DCD.idx  ODDevice.h.D68F266255F8D450.idx  ODGameObject.cpp.5D1B5186A022D1D4.idx  ODGameObject.h.90AA3B2DA3D8002D.idx  ODModel.cpp.9D265932427DF65D.idx  ODModel.h.1BC93A9C570B2FC4.idx  ODPipeline.cpp.A19F30CA567E52FA.idx  ODPipeline.h.73A8FB33186BC88C.idx  ODRenderer.cpp.A941FD81B24D0743.idx  ODRenderer.h.63F84276F0DD46C3.idx  ODSwapChain.cpp.52ACFDD790C98D2E.idx  ODSwapChain.h.F73BD78B0B699FD6.idx  ODTextureHandler.cpp.D34FA1AD1A151AC5.idx  ODTextureHandler.h.0B39518FE53A1B90.idx  ODUtils.h.0AC742F1BA5AC8BA.idx  ODWindow.cpp.EA4415808D1958C2.idx  ODWindow.h.B0F0D39B7F30BD09.idx  ObsidianEngine.h.39FC6122AA844C41.idx  Particle.cpp.3352402E87FD12DE.idx  Particle.h.4ADE7C413A846D07.idx  PointLightSystem.cpp.7085A7F1CF4A92B8.idx  PointLightSystem.h.4908F4335D3E45B5.idx  SandboxApp.cpp.D28FF8BD3F453B3C.idx  SandboxApp.h.BDFE371A812741EC.idx  SimpleRendererSystem.cpp.268C806F89CF13AD.idx  SimpleRendererSystem.h.A598507678D47625.idx  UIManager.cpp.153FCE67133CC7B7.idx  UIManager.h.8A04354141608A09.idx  _fixes.hpp.CA44CB1564319669.idx  (+437 more)
engine/: ODDevice.h  ODModel.cpp  ODModel.h  ODPipeline.cpp  ODPipeline.h  ODSwapChain.cpp  ODSwapChain.h  ODWindow.cpp  ODWindow.h  app.cpp  app.h  main.cpp  window.cpp  window.h
engine/libraries/nuklear/: nuklear_glfw_vulkan.h
engine/shaders/: compile.bat  compile.sh  compute.comp  compute.frag  compute.vert  grid_shader.frag  grid_shader.vert  point_light_shader.frag  point_light_shader.frag.spv  point_light_shader.vert  point_light_shader.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
engine/shaders/compiled/: compute.comp.spv  compute.spv  compute.vert.spv  grid_shader.frag.spv  grid_shader.vert.spv  simple_shader.frag.spv  simple_shader.vert.spv
engine/shaders/compiled/nuklear/: demo.frag.spv  demo.vert.spv
engine/src/: FrameInfo.h  ODBuffer.cpp  ODBuffer.h  ODCamera.cpp  ODCamera.h  ODDescriptors.cpp  ODDevice.cpp  ODDevice.h  ODFrameInfo.h  ODGameObject.cpp  ODGameObject.h  ODModel.cpp  ODModel.h  ODPipeline.cpp  ODPipeline.h  ODRenderer.cpp  ODRenderer.h  ODSwapChain.cpp  ODSwapChain.h  ODTextureHandler.cpp  ODTextureHandler.h  ODUtils.h  ODWindow.cpp  ODWindow.h  ObsidianEngine.h  Particle.cpp  Particle.h  SimpleRendererSystem.cpp  SimpleRendererSystem.h  UIManager.cpp  UIManager.h  app.cpp  app.h  keyboardMovementController.cpp  keyboardMovementController.h
engine/src/Renderer/Common/: ODCamera.cpp  ODCamera.h  ODGameObject.cpp  ODModel.cpp  ODModel.h  ODRenderer.cpp  ODRenderer.h  ODTextureHandler.cpp  ODTextureHandler.h  ODWindow.h  Particle.cpp  Particle.h
engine/src/Renderer/Vulkan/: ODDescriptors.h  ODDevice.cpp  ODDevice.h  ODPipeline.cpp  ODSwapChain.cpp  ODSwapChain.h
engine/src/RendererSystems/: GPUParticleSystem.cpp  GPUParticleSystem.h  GridSystem.cpp  GridSystem.h  PointLightSystem.cpp  PointLightSystem.h  SimpleRendererSystem.cpp  SimpleRendererSystem.h
engine/src/UI/: UIManager.cpp  UIManager.h
engine/src/Utils/: keyboardMovementController.cpp  keyboardMovementController.h
engine/src/core/: app.cpp  app.h  main.cpp
sandbox/: SandboxApp.cpp  SandboxApp.h
